--- a/Web/styles.css
+++ b/Web/styles.css
@@ -143,3 +143,18 @@ button, input[type=text], #jumpToLine, #goToLine {
   margin: 10px;
 }
 
+#toggle-button {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+#toggle {
+  background-color: #343a40;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-size: 18px;
+  margin: 10px;
+  padding: 10px;
+}
