--- a/Web/styles.css
+++ b/Web/styles.css
@@ -177,12 +177,14 @@ button, input[type=text], #jumpToLine, #goToLine {
 }
 
 .light-mode button {
-  background-color: #fff;
-  color: #1f1f1f;
+  background-color: #1f1f1f;
+  color: #fff;
 }
+
 
 .light-mode input[type=text] {
   background-color: #fff;
   color: #1f1f1f;
+  border: 1px solid #1f1f1f;
 }
 
