--- a/Web/styles.css
+++ b/Web/styles.css
@@ -162,7 +162,7 @@ button, input[type=text], #jumpToLine, #goToLine {
 /* Light mode */
 
 body.light-mode {
-  background-color: #fff;
+  background-color: #f5f5f5;
   color: #1f1f1f;
 }
 
