--- a/Web/styles.css
+++ b/Web/styles.css
@@ -50,6 +50,10 @@
     margin: 10px;
     padding: 10px;
   }
+
+button:hover {
+  background-color: #87cefa;
+}
   
   input[type=text] {
     background-color: #343a40;
@@ -192,4 +196,8 @@ body.light-mode {
 .light-mode #toggle {
   background-color: #1f1f1f;
   color: #fff;
+}
+
+.light-mode button:hover {
+  background-color: #87cefa;
 }
