--- a/Web/styles.css
+++ b/Web/styles.css
@@ -261,10 +261,33 @@ body.light-mode {
 
 #accessibility-menu {
   display: none; /* Hide the accessibility menu by default */
+  position: absolute;
+  top: -120px; /* Position the menu above the button */
+  right: 50px;
 }
 
 #accessibility-menu.active {
   display: block; /* Show the accessibility menu when the button is clicked */
+}
+
+#accessibility-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  background-color: #fff;
+  border: 1px solid #000;
+  border-radius: 5px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+#accessibility-menu ul li {
+  padding: 10px;
+  text-align: center;
+}
+
+#accessibility-menu ul li:hover {
+  background-color: #eee;
+  cursor: pointer;
 }
 
 #Quiz {
