--- a/Web/styles.css
+++ b/Web/styles.css
@@ -288,7 +288,7 @@ body.light-mode {
   list-style: none;
   padding: 0;
   margin: 0;
-  background-color: #fff;
+  background-color: #343a40;
   border: 1px solid #000;
   border-radius: 5px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
@@ -300,7 +300,7 @@ body.light-mode {
 }
 
 #accessibility-menu ul li:hover {
-  background-color: #eee;
+  background-color: #87cefa;
   cursor: pointer;
 }
 
